Snapping not working correctly #49494

Closed
opened 2016-09-29 23:13:46 +02:00 by Thomas Cheng · 8 comments

System Information
Operating system and graphics card

Win10, AMD R9 390

Blender Version
Broken: 2.78 Release Candidate 2
Worked: (optional)

Short description of error

Snapping not working correctly. Some random odd location.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Open attached Blender file
  2. Go to top view
  3. Set snapping to vertex, closest, and snap onto itself mode.
  4. select any vertex point, hold ctrl and try to snap to any point. Will not work. snapbreak.blend
**System Information** Operating system and graphics card Win10, AMD R9 390 **Blender Version** Broken: 2.78 Release Candidate 2 Worked: (optional) **Short description of error** Snapping not working correctly. Some random odd location. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1) Open attached Blender file 2) Go to top view 3) Set snapping to vertex, closest, and snap onto itself mode. 4) select any vertex point, hold ctrl and try to snap to any point. Will not work. [snapbreak.blend](https://archive.blender.org/developer/F370914/snapbreak.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ThomasCheng

Added subscriber: @ThomasCheng

Added subscribers: @mano-wii, @mont29

Added subscribers: @mano-wii, @mont29
Germano Cavalcante was assigned by Bastien Montagne 2016-09-30 10:46:21 +02:00

Problems seems to come from non-zero transform of the object itself (reset its location to 0, and snapping works fine).

@mano-wii want to investigate that one?

Problems seems to come from non-zero transform of the object itself (reset its location to 0, and snapping works fine). @mano-wii want to investigate that one?

Added subscriber: @DavidUllmann

Added subscriber: @DavidUllmann

Any news on this? I'm experiencing faulty snapping every minute when modeling, so this is a major slowdown for me. I also found that having activated 'align rotation with the snapping target' results in erroneus offsets when snapping vertices to other verts on the same mesh.

Any news on this? I'm experiencing faulty snapping every minute when modeling, so this is a major slowdown for me. I also found that having activated 'align rotation with the snapping target' results in erroneus offsets when snapping vertices to other verts on the same mesh.

This issue was referenced by ddf99214dc

This issue was referenced by ddf99214dc0677542d6ca300c3ee49549e6514bc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49494
No description provided.